kubernetes/otel-demo/otel-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-demo-frontend
  namespace: otel-demo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: traefik
  rules:
    - host: otel-demo.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-proxy
                port:
                  number: 8080
  tls:
    - hosts:
        - otel-demo.cluster
      secretName: whoami-tls
